# bam_reader

./: .gitignore  README.md  build.py  main.py  pyproject.toml
bam_reader/: __init__.py  bin2code.pyx  cutils.pyx  utils.py
