[tool.poetry]
name = "bam-reader"
version = "0.1.0"
description = ""
authors = ["Zachary Juang <zachary822@me.com>"]
readme = "README.md"
build = 'build.py'

[tool.poetry.dependencies]
python = "^3.12"
cython = "^3.0.9"


[build-system]
requires = ["poetry-core", "cython", "setuptools"]
build-backend = "poetry.core.masonry.api"
